TestSuite/errors/err0278.pas
type TClass<T> = static class
end;

begin
end.